feat: update doc, add visits service and repo
